<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright (C) 2018 The Asus-SDM660 Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="header"
        android:layout="@layout/header_animation" />

    <PreferenceCategory
        android:key="display"
        android:title="@string/display_title">

        <Preference
            android:key="device_kcal"
            android:persistent="true"
            android:icon="@drawable/ic_kcal"
            android:title="@string/device_kcal_title"
            android:summary="@string/kcal_enabled_summary">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.xiaomi.parts.kcal.KCalSettingsActivity"
                android:targetPackage="com.xiaomi.parts.kcal" />
        </Preference>

        <SwitchPreference
            android:key="fps_info"
            android:icon="@drawable/ic_fps_info"
            android:title="@string/fps_info_title"
            android:summary="@string/fps_info_summary"
            android:persistent="true" />

        <Preference
            android:key="device_doze"
            android:persistent="false"
            android:summary="@string/advanced_doze_summary"
            android:title="@string/ambient_display_xiaomi"
            android:icon="@drawable/ic_xiaomidoze">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="org.lineageos.settings.doze.DozeSettingsActivity"
                android:targetPackage="org.lineageos.settings.doze" />
        </Preference>

        <PreferenceScreen
            android:key="ambient_display_gestures"
            android:fragment="com.xiaomi.parts.ambient.AmbientGesturePreferenceActivity"
            android:summary="@string/ambient_display_gestures_summary"
            android:icon="@drawable/ic_doze"
            android:title="@string/ambient_display_gestures_title" />

        <Preference
            android:key="thermal_profiles"
            android:name=".thermal.ThermalActivity"
            android:icon="@drawable/ic_thermal_settings"
            android:theme="@style/CustomOptionsTheme"
            android:summary="@string/thermal_summary"
            android:title="@string/thermal_title">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="com.xiaomi.parts"
                android:targetClass="com.xiaomi.parts.thermal.ThermalActivity" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
    android:key="selinux"
    android:title="@string/selinux_category">

    <Preference
        android:summary="@string/selinux_explanation_summary"
        android:selectable="false"/>

    <SwitchPreference
        android:key="selinux_mode"
        android:title="@string/selinux_mode_title"
        android:summaryOn="@string/selinux_enforcing_summary"
        android:summaryOff="@string/selinux_permissive_summary"
        android:icon="@drawable/ic_linux" />

    <SwitchPreference
        android:key="selinux_persistence"
        android:title="@string/selinux_persistence_title"
        android:summary="@string/selinux_persistence_summary"
        android:defaultValue="false"
        android:icon="@drawable/ic_power" />
</PreferenceCategory>

    <PreferenceCategory
        android:key="audio"
        android:title="@string/audio_title">

         <Preference
            android:summary="@string/dirac_summary"
            android:icon="@drawable/ic_dirac"
            android:key="dirac_enabled"
            android:title="Xiaomi Dirac">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="com.xiaomi.dirac"
                android:targetClass="com.xiaomi.dirac.DiracActivity" />
        </Preference>

        <Preference
            android:key="clear_speaker_settings" 
            android:title="@string/clear_speaker_title"
            android:icon="@drawable/ic_speaker_cleaner_icon" >
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.xiaomi.parts.speaker.ClearSpeakerActivity"
                android:targetPackage="com.xiaomi.parts.speaker" />
        </Preference>

        <com.xiaomi.parts.preferences.SecureSettingCustomSeekBarPreference
            android:defaultValue="5"
            android:key="headphone_gain"
            android:max="20"
            app:min="-40"
            android:icon="@drawable/ic_headphone"
            android:title="@string/headphone_gain" />

        <com.xiaomi.parts.preferences.SecureSettingCustomSeekBarPreference
            android:defaultValue="5"
            android:key="microphone_gain"
            android:max="20"
            app:min="-40"
            android:icon="@drawable/ic_mic"
            android:title="@string/microphone_gain" />

        <com.xiaomi.parts.preferences.SecureSettingCustomSeekBarPreference
            android:defaultValue="5"
            android:key="earpiece_gain"
            android:max="20"
            app:min="-40"
            android:icon="@drawable/ic_earpiece"
            android:title="@string/earpiece_gain" />
    </PreferenceCategory>
</PreferenceScreen>
